--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -11,44 +11,53 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style/bootstrap.css') }}">
 
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-1.11.1.min.js") }}"></script>
+     <script type="text/javascript" src="{{ url_for ('static', filename= "js/bootstrap.min.js") }}"></script>
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
+
   </head>
   <body>
     <div class="container-fluid">
       <div class="row" id="header">
 
-        <div class="col-md-3">
+        <div class="col-xs-3 col-sm-3 col-md-2">
 
-          <a href="{{ url_for('index') }}"><img src="{{ url_for('static',filename="image/logo.png") }}"  width="80"/></a>
+          <a href="{{ url_for('index') }}"><img class="img-responsive" src="{{ url_for('static',filename="image/logo.png") }}"  width="60"/></a>
         </div>
           {% if current_user.is_authenticated %}
-            <div class="col-md-1 col-md-offset-5">
-            <img src="{{ url_for('static',filename="media/" + current_user.avatar) }}" width="80"/>
-            </div>
-            <div class="col-md-2">
-                <h4>| <a href="{{ url_for('user', username = current_user.username) }}">{{current_user.username}}</a></h4>
-            </div>
-            <div class="col-md-1">
-                <h4>| <a href="{{ url_for('logout') }}">Logout</a><h4>
+            <div class="col-xs-6 col-sm-3 col-sm-offset-4 col-md-2 col-md-offset-7">
+              <span>
+
+                <img  src="{{ url_for('static',filename="media/" + current_user.avatar) }}" width="60"/>
+
+
+                 <a href="{{ url_for('user', username = current_user.username) }}">{{current_user.username}}</a>
+            </span>
+  </div>
+            <div class=" col-xs-3 col-sm-2 col-md-1">
+                <span>
+                    <a href="{{ url_for('logout') }}">Logout</a>
+                </span>
             </div>
 
           {% else %}
-            <div class="col-md-1 col-md-offset-6">
-                <h4> | <a href="{{ url_for('login') }}">Login</a></h4>
+            <div class="col-xs-6 col-sm-3 col-sm-offset-4 col-md-2 col-md-offset-7">
+                <a href="{{ url_for('login') }}">Login</a>
             </div>
-            <div class="col-md-2">
-               <h4>  | <a href="{{ url_for('register') }}">Register</a></h4>
+            <div class="col-xs-3 col-sm-2 col-md-1">
+               <a href="{{ url_for('register') }}">Register</a>
             </div>
 
 
          {% endif %}
       </div>
       <div class="row" id="body">
-          <div class="col-md-3" id = "sidebar">
+          <div class="col-md-2" id = "sidebar">
                 {% block sidebar %}
-                    dfghj
+                    <a href="{{ url_for('popular_product')}}"><button type="button" class="btn btn-primary btn-block">Catalog</button></a>
+                    <a href="{{ url_for('last_posts')}}"><button type="button" class="btn btn-primary btn-block">Blog</button></a>
                 {% endblock %}
           </div>
-          <div class="col-md-9" id ="main">
+          <div class="col-xs-12 col-sm-12 col-md-10" id ="main">
 
                 {% block body %}{% endblock %}
               {% with messages = get_flashed_messages() %}
