--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -1,16 +1,17 @@
 
-{% block comments %}
+
 {% from 'helpers.html' import product_comment_macro with context %}
+
     {%- for key, value in dictionary.iteritems() recursive -%}
 
         {% if key %}
             <li>
             {% for comment in comments %}
                 {% if comment.id == key %}
-                    {{ product_comment_macro(comment) }}
+                    {{ product_comment_macro(comment, dict_like) }}
                 {% endif %}
             {% endfor %}
-                <ul>{{ loop(value.iteritems()) }}</ul>
+                <ul class="comment_ul">{{ loop(value.iteritems()) }}</ul>
              </li>
         {% endif %}
     {%- endfor -%}
@@ -18,25 +19,59 @@
 
 
 <script type="text/javascript">
+function del_prod_comment(e, id) {
+
+    e.preventDefault()
+    if (confirm('Are you sure you want to save this thing into the database?')) {
+
+        $.post( "{{ url_for('del_prod_comment')}}", {id:id},function( data ) {
+            $(".one_comment#comment" + id).html(data.deleted);
+             $("#edit" + id).text(data.nodelet);
+
+
+        });
+} else {
+    // Do nothing!
+}
+
+}
+
+function edit_prod_comment(event, id){
+    event.preventDefault();
+
+    $.ajax({
+        type: "GET",
+        url: '/edit_prod_comment/'+ id,
+
+        success: function (data) {
+             $(".one_comment#comment" + id).html(data.form);
+             $("#edit" + id).text(data.noedit);
+
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+
+
+};
 
 
 
 
 $(".discussion").click(function (event){
-
-
-
-    $(this).next().slideToggle();
     var id = $(this).attr('id');
+    $(".answer#answer" + id).slideToggle();
+    var user = $(this).attr('user');
     var product = "{{product_id}}";
     $.ajax({
         type: "POST",
         url: '/product_comment_form',
         data: "parent_id=" + id + "&product_id=" + product,
         success: function (data) {
-             $(".answer#answer" + id).html(data.prod_form);
+             $(".answer#answer" + id).html(data.com_form);
 
-            $("textarea#text").val("");
+            $("textarea#text").val(user + ", ");
 
         },
         error: function (xhr, str) {
@@ -47,31 +82,69 @@ $(".discussion").click(function (event){
 
 });
 
-function Add_comment(id, event) {
-    event.preventDefault();
-    var text = ($('textarea[name="text"]').val());
-    alert (text);
-    $.ajax({
-        type: "POST",
-        url: $(".answer_form#" + id).attr('action'),
-        data: "text="+ text + "&parent=" + id,
-        success: function (data) {
-            $("#comment").html(data.comments);
-
-            $("textarea#text").val("");
 
 
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
 
-
+jQuery.fn.clickToggle = function(a,b) {
+  function cb(){ [b,a][this._tog^=1].call(this); }
+  return this.on("click", cb);
 };
+
+$( "img#white.comment" ).clickToggle(function() {
+    var comment_id = $(this).attr("comment_id");
+    $(this).attr("src", '/static/image/blue_heart.png');
+
+    $.ajax({
+         type: 'POST',
+         url: "/like_prodcomment",
+         data: "id=" +comment_id,
+         success: function(data){
+             $('#vote_countprodcomment' + comment_id).html(data);
+         }
+    });
+}, function() {
+    $(this).attr("src", '/static/image/white.png');
+
+    var comment_id = $(this).attr("comment_id");
+      $.ajax({
+         type: 'POST',
+         url: "/unlike_prodcomment",
+         data: "id=" +comment_id,
+         success: function(data){
+             $('#vote_countprodcomment' + comment_id).html(data);
+         }
+    });
+});
+
+
+$( "img#blue.comment" ).clickToggle(function() {
+    var comment_id = $(this).attr("comment_id");
+    $(this).attr("src", '/static/image/white.png');
+
+    $.ajax({
+         type: 'POST',
+         url: "/unlike_prodcomment",
+         data: "id=" +comment_id,
+         success: function(data){
+
+             $('#vote_countprodcomment' + comment_id).html(data);
+         }
+    });
+}, function() {
+    var comment_id = $(this).attr("comment_id");
+        $(this).attr("src", '/static/image/blue_heart.png');
+
+      $.ajax({
+         type: 'POST',
+         url: "/like_prodcomment",
+         data: "id=" +comment_id,
+         success: function(data){
+             $('#vote_countprodcomment' + comment_id).html(data);
+         }
+    });
+});
+
+
+
 </script>
-{% endblock %}
-
-
-
 
