--- a/application/templates/single_product.html
+++ b/application/templates/single_product.html
@@ -1,72 +1,388 @@
 {% extends "base.html" %}
 {% block body %}
-<h1> {{ product.title }}</h1>
-<td> <img src="{{ url_for('static',filename="media/" + product.image) }}" /> </td>
-<div id="vote_count">{{ product.vote_count }}</div>
-<p>
-{{ product.description }}
-<a href="#" OnClick="DoAction(event);" >Vote</a>
-</p>
-<div id="comment" deep="0">
+<div class="row">
+
+<div class="col-md-7" id="single_post">
+    <div id="product_box">
+        {% if current_user == product.product_author %}
+            <div class="btn-group btn-block">
+                  <button type="button" class="btn btn-block btn-default dropdown-toggle user_but" data-toggle="dropdown">Edit <span class="caret"></span></button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="{{ url_for('user_edit_product', id= product.id  ) }}">edit</a></li>
+                    <li><a href="#" onclick="user_del_product(event);">delete</a></li>
+
+                  </ul>
+                </div>
+        {% endif %}
+        <h1> {{ product.title }}</h1>
+        {% if product.image %}
+            <img src="{{ url_for('static',filename="media/" + product.image) }}" width="200"/>
+        {% endif %}
+
+        <p>
+        {{ product.description }}
+        </p>
+
+        <p>
+            Write <a href="{{ url_for('user', username=product.product_author.username)}}">{{ product.product_author.username }}</a> at {{product.published_at}}
+        </p>
+
+        {% if current_user.is_authenticated %}
+                {% if ifliked%}
+
+                              <span id="vote_countproduct{{product.id}}">{{ product.vote_count }}</span>&nbsp;<img class="product" id="blue" src="{{ url_for('static',filename="image/blue_heart.png" )}}"
+                        product_id={{product.id}} width="20" /></a>
+
+                      {% else %}
+
+                          <span id="vote_countproduct{{product.id}}">{{ product.vote_count }}</span>&nbsp;<img class="product" id="white"
+                                        src="{{ url_for('static',filename="image/white.png" )}}"
+                        width="20" product_id={{product.id}} /></a>
+
+                      {% endif%}
+
+                            {% if ifsaved %}
+                                  <span class="star product" id="star_gold{{product.id}}">Delete_saved</span>&nbsp;<img class="product" id="gold_star"  src="{{ url_for('static',filename="image/gold_star.png" )}}"
+                                      width="20" product_id={{product.id}} /></a>
+                            {% else%}
+                                <span class="star product" id="star_white{{product.id}}">Add_to_saved</span>&nbsp;<img class = "product" id="white_star"  src="{{ url_for('static',filename="image/white_star.png" )}}"
+                                      width="20" product_id={{product.id}} /></a>
+                        {% endif %}
+        {% else %}
+            <span>{{ product.vote_count }}</span>&nbsp;<img class="anon_like" src="{{ url_for('static',filename="image/white.png" )}}"
+                         width="20" /></a>
+             <span class="star product">aDD TO_saved</span>&nbsp;<img  src="{{ url_for('static',filename="image/white_star.png" )}}"
+                                      width="20" /></a>
+
+            {% endif %}
+    </div>
+    <div class="row">
+        {% if current_user.is_authenticated %}
+
+            <div class="col-md-3">
+                <button type="button"id="button_comment1" class="btn btn-primary btn-block">Comment</button>
+            </div>
+        {% else %}
+             <div class="col-md-3">
+                <button type="button"id="anon_comment" class="btn btn-primary btn-block">Comment</button>
+            </div>
+        {%endif%}
+        <div class="col-md-3" id ="all_comment">
+             <div class="btn-group">
+                  <button type="button" class="btn btn-default btn-lg dropdown-toggle" id = "comment_but" data-toggle="dropdown">Sort <span class="caret"></span></button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#" onclick="product_comment('data', event);">data</a></li>
+                    <li><a href="#" onclick="product_comment('rating', event);">rating</a></li>
+
+                  </ul>
+             </div>
+
+        </div>
+
+
+
+    </div>
+                <div id = "hiden_form1">
+                    <form action="{{ url_for('singleproduct', product_id=product.id  ) }}" method="post" id ="form1"
+                          enctype=multipart/form-data  class="form-horizontal comment_form">
+                        <div class="control-group">
+                            <div class="controls">
+                                 {{form.hidden_tag()}}
+                                    <p>
+                                    {{ form.text.label }}:<br>
+                                    {{form.text(class_="form-control my_textarea", rows="4")}} <br>
+                                        {{form.file}}<br>
+
+                                    {% if form.errors %}
+                                        <ul class=errors>
+                                         {% for error in form.errors %}
+                                          <li>{{ error }}</li>
+                                        {% endfor %}
+                                        </ul>
+                                    {% endif %}
+                                  </p>
+
+                            </div>
+                        </div>
+
+                        <div class="control-group">
+                            <div class="controls">
+                              <button type="submit" class="btn btn-success">Add comment</button>
+                            </div>
+                        </div>
+                      </form>
+                </div>
+
+<div class="messages-container" >
+    <p>You have to <a href="{{ url_for('login')}}">login</a></p>
+</div>
+
+<div id="comment">
+
     {% include "product_comments.html" %}
 </div>
-<h1>Add comment</h1>
-<form action="{{ url_for('singleproduct', product_id=product.id  ) }}" method="post" class="form-horizontal comment_form"/>
-    <div class="control-group">
-        <div class="controls">
-             {{form.hidden_tag()}}
-                <p>
-                {{ form.text.label }}:<br>
-                {{form.text(size=80)}}<br>
-                {% if form.errors %}
-                    <ul class=errors>
-                     {% for error in form.errors %}
-                      <li>{{ error }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-              </p>
+    {% if current_user.is_authenticated %}
+        <h1 id="button_comment2">Add comment</h1>
 
-        </div>
+            <form action="{{ url_for('singleproduct', product_id=product.id  ) }}" method="post" id = "form2"
+                  enctype=multipart/form-data class="form-horizontal comment_form">
+                <div class="control-group">
+                    <div class="controls">
+                         {{form.hidden_tag()}}
+                            <p>
+                            {{ form.text.label }}:<br>
+                            {{form.text(class_="form-control my_textarea", rows="4" )}}
+                             {{form.file}}<br>
+
+                            {% if form.errors %}
+                                <ul class=errors>
+                                 {% for error in form.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                                </ul>
+                            {% endif %}
+                          </p>
+
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <div class="controls">
+                      <button type="submit" class="btn btn-success">Add comment</button>
+                    </div>
+                </div>
+              </form>
+    {% else %}
+     <p>You have to <a href="{{ url_for('login')}}">login</a> to add comment</p>
+    {% endif %}
     </div>
 
-    <div class="control-group">
-        <div class="controls">
-          <button type="submit" class="btn btn-success">Add comment</button>
-        </div>
-    </div>
-  </form>
+
+
+
+ </div>
+<div class="col-md-3" id="many_post">
+    <h2>Popular posts</h2>
+
+</div>
+ </div>
 
 <script type="text/javascript">
+function user_del_product(e) {
+    var id = "{{product_id}}"
+    alert(id);
+    e.preventDefault()
+    if (confirm('Are you sure you want to save this thing into the database?')) {
 
-
-function DoAction( event  )
-{
-    event.preventDefault();
-    alert(123);
-    $.ajax({
-         type: 'POST',
-         url: "{{ url_for('like_product', product_id=product.id) }}",
-         success: function(data){
-             $('#vote_count').html(data);
-         }
-    });
+        $.post( "{{ url_for('user_del_product')}}", {id:id},function( data ) {
+           window.location.href = "{{ url_for('popular_product') }}";
+        });
+} else {
+    // Do nothing!
 }
-$(".comment_form").submit(function (form) {
+
+}
+$(document).ready(function() {
+    $('.anon_like').click(function() {
+        $(".messages-container").fadeIn().delay(3000).fadeOut();
+   });
+
+    $('#anon_comment').click(function() {
+        $(".messages-container").fadeIn().delay(3000).fadeOut();
+   });
+});
+
+
+function product_comment(sort, event) {
     $.ajax({
         type: "POST",
-        url: $(".comment_form").attr('action'),
-        data: $(".comment_form").serialize(),
+        url: "{{url_for('product_contain_comment' )}}",
+        data: "product_id="+ "{{product_id}}" + "&sort=" + sort,
         success: function (data) {
             $("#comment").html(data.comments);
-            $("textarea#text").val("");
-
         },
         error: function (xhr, str) {
             alert('Mistake ' + xhr.responseCode);
         }
     });
-    form.preventDefault();
+    event.preventDefault();
+
+};
+
+
+$(document).ready(function() {
+    $('#button_comment1').click(function() {
+        $("#hiden_form1").slideToggle(500);
+    });
+    $("textarea.my_textarea").val("Type your comment");
+
+    $("textarea.my_textarea").focus(function(){$("textarea.my_textarea").val("");});
+
+
+});
+
+$("#form1.comment_form").submit(function (event) {
+    $("#hiden_form1").slideToggle();
+    var formData = new FormData($(this)[0]);
+
+       $.ajax({
+            type: "POST",
+            url: $(this).attr('action'),
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (data) {
+                $("#comment").html(data.comments);
+                $('textarea#text').val("");
+
+            },
+            error: function (xhr, str) {
+                alert('Mistake ' + xhr.responseCode);
+            }
+        });
+event.preventDefault();
+});
+
+$("#form2.comment_form").submit(function (event) {
+        var formData = new FormData($(this)[0]);
+
+        $.ajax({
+            type: "POST",
+            url: $(this).attr('action'),
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (data) {
+                $("#comment").html(data.comments);
+                $('textarea#text').val("");
+
+            },
+            error: function (xhr, str) {
+                alert('Mistake ' + xhr.responseCode);
+            }
+        });
+event.preventDefault();
+});
+
+
+jQuery.fn.clickToggle = function(a,b) {
+  function cb(){ [b,a][this._tog^=1].call(this); }
+  return this.on("click", cb);
+};
+
+$( "img#white.product" ).clickToggle(function() {
+    var product_id = $(this).attr("product_id");
+    $(this).attr("src", '/static/image/blue_heart.png');
+
+    $.ajax({
+         type: 'POST',
+         url: "/like_product",
+         data: "id=" +product_id,
+         success: function(data){
+             $('#vote_countproduct' + product_id).html(data);
+         }
+    });
+}, function() {
+    $(this).attr("src", '/static/image/white.png');
+
+    var product_id = $(this).attr("product_id");
+      $.ajax({
+         type: 'POST',
+         url: "/unlike_product",
+         data: "id=" +product_id,
+         success: function(data){
+             $('#vote_countproduct' + product_id).html(data);
+         }
+    });
+});
+
+
+$( "img#blue.product" ).clickToggle(function() {
+    var product_id = $(this).attr("product_id");
+    $(this).attr("src", '/static/image/white.png');
+
+    $.ajax({
+         type: 'POST',
+         url: "/unlike_product",
+         data: "id=" +product_id,
+         success: function(data){
+
+             $('#vote_countproduct' + product_id).html(data);
+         }
+    });
+}, function() {
+    var product_id = $(this).attr("product_id");
+        $(this).attr("src", '/static/image/blue_heart.png');
+
+      $.ajax({
+         type: 'POST',
+         url: "/like_product",
+         data: "id=" +product_id,
+         success: function(data){
+             $('#vote_countproduct' + product_id).html(data);
+         }
+    });
+});
+
+
+
+$( "img#gold_star.product" ).clickToggle(function() {
+    var product_id = $(this).attr("product_id");
+
+    $(this).attr("src", '/static/image/white_star.png');
+
+    $.ajax({
+         type: 'GET',
+         url: "{{ url_for('delete_product') }}",
+         data: "product_id=" +product_id,
+         success: function(data){
+
+             $('.product#star_gold' + product_id).text("Add to saved");
+         }
+    });
+
+}, function() {
+    var product_id = $(this).attr("product_id");
+        $(this).attr("src", '/static/image/gold_star.png');
+
+      $.ajax({
+         type: 'GET',
+         url: "{{ url_for('save_product') }}",
+         data: "product_id=" +product_id,
+         success: function(data){
+             $('.product#star_gold' + product_id).text("Delete_from_saved");
+         }
+    });
+});
+
+$( "img#white_star.product" ).clickToggle(function() {
+    var product_id = $(this).attr("product_id");
+
+    $(this).attr("src", '/static/image/gold_star.png');
+
+    $.ajax({
+         type: 'GET',
+         url: "{{ url_for('save_product') }}",
+         data: "product_id=" +product_id,
+
+         success: function(data){
+             $('.product#star_white' + product_id).text("Delete from saved");
+         }
+    });
+
+}, function() {
+    var product_id = $(this).attr("product_id");
+        $(this).attr("src", '/static/image/white_star.png');
+
+      $.ajax({
+         type: 'GET',
+         url: "{{ url_for('delete_product') }}",
+         data: "product_id=" +product_id,
+         success: function(data){
+             $('.product#star_white' + product_id).text("Add to saved");
+         }
+    });
 });
 </script>
 {% endblock %}
+
