--- a/application/templates/user_edit.html
+++ b/application/templates/user_edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <h1>Edit Your Profile</h1>
-<form action="{{url_for('user_edit', id = user.id )}}" method="post" name="edit" enctype=multipart/form-data>
+<form action="{{url_for('user_edit', username = user.username )}}" method="post" name="edit" enctype=multipart/form-data>
     {{ form.csrf_token }}
     <table>
         <tr>
